// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArchiveConfirmationModal/> should render 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Archive ticket field
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <p>
                Archiving 
                <b>
                  Foo
                </b>
                 will make it unavailable to new 
                ticket
                s. 
                Ticket
                s with existing fields will keep the values associated to them.
              </p>
              <p>
                This field may be in use in Rules, Macros and Saved Filters. Make sure to edit them, as they will not be able to apply a value on an archived field.
              </p>
              <p>
                Are you sure you want to archive this field?
              </p>
            </div>
            <div
              class="actions modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
                type="button"
              >
                <span
                  class="ui-button-content-a432"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ml-3 confirmBtn ui-button-fill-a432 ui-button-primary-a432"
                type="button"
              >
                <span
                  class="ui-button-content-a432"
                >
                  Archive
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<ArchiveConfirmationModal/> should render 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Archive customer field
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <p>
                Archiving 
                <b>
                  Foo
                </b>
                 will make it unavailable to new 
                customer
                s. 
                Customer
                s with existing fields will keep the values associated to them.
              </p>
              <p>
                Are you sure you want to archive this field?
              </p>
            </div>
            <div
              class="actions modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
                type="button"
              >
                <span
                  class="ui-button-content-a432"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ml-3 confirmBtn ui-button-fill-a432 ui-button-primary-a432"
                type="button"
              >
                <span
                  class="ui-button-content-a432"
                >
                  Archive
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;
